2007-10-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * po/POTFILES.in: Added lib/fantasdic/source_base.rb.

2007-10-14 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/utils.rb: Added String#latin?, String#kana?, String#kanji?
    and File::which helpers.
    * lib/fantasdic/sources/dict_server.rb: Removed useless attr_accessors and
    moved vbox internal spacing...
    * lib/fantasdic/source_base.rb:... here. Fixed a comment.

2007-10-13 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade: "gtk-help" must not be
    translatable (bug of glade3, file edited manually).
    * data/fantasdic/glade/preferences_dialog.glade: Ditto.
    * po/POTFILES.in: Add lib/fantasdic/ui/browser.rb to the list of files.

2007-10-13 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/command_line.rb: Following the new API.

2007-10-13 Mathieu Blondel <mblondel@svn.gnome.org>

    * tools/dict-proxy.rb:
    * tools/edict2dictd.rb:
    * tools/epwing2dictd.rb:
    * tools/jmdict2dictd.rb:
    * tools/tanakacorpus2dictd.rb:
    * tools/dict-server.rb:
    * tools/stardict2dictd.rb:
    * tools/jmnedict2dictd.rb:
    * tools/kanjidic22dictd.rb:
    * tools/dictfmt.rb:
    * win32/gen_po.rb:
    * win32/fantasdic.c:
    * lib/fantasdic/ui.rb:
    * lib/fantasdic/utils.rb:
    * lib/fantasdic/preferences.rb:
    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/sources/google_translate.rb:
    * lib/fantasdic/gettext.rb:
    * lib/fantasdic/net/dict.rb:
    * lib/fantasdic/command_line.rb:
    * lib/fantasdic/source_base.rb:
    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/utils.rb:
    * lib/fantasdic/ui/browser.rb:
    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/alert_dialog.rb:
    * lib/fantasdic/ui/glade_base.rb:
    * lib/fantasdic/ui/about_dialog.rb:
    * lib/fantasdic/ui/combobox_entry.rb:
    * lib/fantasdic/ui/matches_listview.rb:
    * lib/fantasdic/ui/ipc.rb: